--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cat on synthesizer in space</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
     <script type="module" src="index.js"></script>
-</head>
-<body>
-  <div id="sky"></div>
-  <div id="score"></div>
-  <div id="synth" class="object start-position-2">🎹</div>
-  <div id="cat" class="object start-position">🐈</div>
-  <div id="space-key" class="object start-position">SPACE</div>
-  <div class="description">Put&nbsp;the&nbsp;cat on&nbsp;the&nbsp;synthesizer. Hit&nbsp;SPACE&nbsp;for&nbsp;more&nbsp;fun</div>
-</body>
+  </head>
+  <body>
+    <div id="sky"></div>
+    <div id="score"></div>
+    <div id="synth" class="object start-position-2">🎹</div>
+    <div id="cat" class="object start-position">🐈</div>
+    <div id="space-key" class="object start-position">SPACE</div>
+    <div class="description">Put&nbsp;the&nbsp;cat on&nbsp;the&nbsp;synthesizer. Hit&nbsp;SPACE&nbsp;for&nbsp;more&nbsp;fun</div>
+  </body>
 </html>
