Implement 2-player game mode

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,8 @@
   <body>
     <div id="sky"></div>
     <div id="score"></div>
-    <div id="synth" class="object start-position-2">🎹</div>
-    <div id="cat" class="object start-position">🐈</div>
-    <div id="space-key" class="object start-position">SPACE</div>
     <div class="description">Put&nbsp;the&nbsp;cat on&nbsp;the&nbsp;synthesizer. Hit&nbsp;SPACE&nbsp;for&nbsp;more&nbsp;fun</div>
+    <canvas></canvas>
+    <div id="space-key" class="object start-position">SPACE</div>
   </body>
 </html>
