--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Cat on synthesizer in space</title>
-    <link rel="stylesheet" href="index.css" />
-    <script type="module" src="index.js"></script>
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <div id="sky"></div>
