Add more game objects

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
   <body>
     <div id="sky"></div>
     <div id="score"></div>
-    <div class="description">Put&nbsp;the&nbsp;cat on&nbsp;the&nbsp;synthesizer. Hit&nbsp;SPACE&nbsp;for&nbsp;more&nbsp;fun</div>
+    <div class="description">Bring&nbsp;your&nbsp;cat&nbsp;to&nbsp;a&nbsp;synthesizer. Hit&nbsp;SPACE&nbsp;to&nbsp;start.</div>
     <canvas></canvas>
-    <div id="space-key" class="object start-position">SPACE</div>
   </body>
 </html>
