Add screen controls, show winner

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,6 @@
     <div id="score"></div>
     <div class="description">Bring&nbsp;your&nbsp;cat&nbsp;to&nbsp;a&nbsp;synthesizer. Hit&nbsp;SPACE&nbsp;to&nbsp;start.</div>
     <canvas></canvas>
+    <div class="screenControls"><button id="left">&larr;</button><button id="right">&rarr;</button></div>
   </body>
 </html>
