Adjust styling and change name

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,14 @@
         font-family: monospace;
       }
       body::before {
-        content: '🐱🚀🎹 SPACE';
+        content: '🐱🚀🎹\ASPACE';
         position: absolute;
+        white-space: pre;
+        text-align: center;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        font-size: 15vw;
+        font-size: 20vw;
         color: gold;
         transition: opacity 1s ease-out;
       }
