Add victory/defeat screen, add human marker, click mode adaptions

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,9 @@
     <div id="score"></div>
     <div class="description">Bring&nbsp;your&nbsp;cat&nbsp;to&nbsp;a&nbsp;synthesizer. Hit&nbsp;SPACE&nbsp;to&nbsp;start.</div>
     <canvas></canvas>
-    <div class="screenControls"><button id="left">&larr;</button><button id="right">&rarr;</button></div>
+    <div class="screen-controls">
+      <div id="left">&larr;</div>
+      <div id="right">&rarr;</div>
+    </div>
   </body>
 </html>
