--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="user-scalable=no" />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <!-- Add style for loading period -->
     <style>
