--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,10 @@
   <body>
     <div id="sky"></div>
     <div id="score"></div>
-    <div class="desc">Bring&nbsp;your&nbsp;cat&nbsp;to&nbsp;a&nbsp;synthesizer. Hit&nbsp;SPACE&nbsp;to&nbsp;start.</div>
+    <div class="desc">
+      <div class="d2"></div>
+      <div class="d1"></div>
+    </div>
     <canvas></canvas>
     <div class="controls">
       <div id="left">&larr;</div>
