More size improvements

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         font-size: 20vw;
         color: gold;
         z-index: -1;
-        transition: opacity 1s ease-out;
+        transition: opacity 1s;
       }
       div {
         display: none;
