Click mode improvements and more size optimizations

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,7 @@
     <div class="controls">
       <div id="left">&larr;</div>
       <div id="right">&rarr;</div>
+      <div id="space">SPACE</div>
     </div>
   </body>
 </html>
