Switch from webpack to rollup

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="user-scalable=no" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>🐱🚀🎹 SPACE: Playful Adventures of Cat Emojis 🎹🚀🐱</title>
     <!-- Add style for loading period -->
     <style>
       body {
