Split into modules

--- a/src/index.html
+++ b/src/index.html
@@ -23,23 +23,7 @@
         z-index: -1;
         transition: opacity 1s;
       }
-      div {
-        display: none;
-      }
     </style>
   </head>
-  <body>
-    <div id="sky"></div>
-    <div id="score"></div>
-    <div class="desc">
-      <div class="d2"></div>
-      <div class="d1"></div>
-    </div>
-    <canvas></canvas>
-    <div class="controls">
-      <div id="left">&larr;</div>
-      <div id="right">&rarr;</div>
-      <div id="space">SPACE</div>
-    </div>
-  </body>
+  <body></body>
 </html>
