Add more meta info, and small text adjustment

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="user-scalable=no" />
+    <meta
+      name="description"
+      content="Have fun adventures in the vastness of space. Collect as many synthesizers as possible. Become the master of chaos."
+    />
+    <meta name="keywords" content="Space, Cats, Synthesizers, Emojis, Game, js13kgames" />
     <title>🐱🚀🎹 SPACE: Playful Adventures of Cat Emojis 🎹🚀🐱</title>
+    <link rel="manifest" href="manifest.json" />
     <!-- Add style for loading period -->
     <style>
       body {
